objects/ASI_CN_NPL_BTL_Plan__c.object
<CustomObject>
    <description>ASI CN NPL New Product BTL Launch Plan, Child object of NPL Request</description>
    <fields>
        <fullName>ASI_CN_NPL_Activity_Format__c</fullName>
        <label>Activity Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vol. Promotion</fullName>
                </value>
                <value>
                    <fullName>Image Event</fullName>
                </value>
                <value>
                    <fullName>Consumer Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Channel__c</fullName>
        <label>Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese Bar</fullName>
                </value>
                <value>
                    <fullName>Western Bar</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>IHBR</fullName>
                </value>
                <value>
                    <fullName>KTV</fullName>
                </value>
                <value>
                    <fullName>FKTV</fullName>
                </value>
                <value>
                    <fullName>Hypermarket</fullName>
                </value>
                <value>
                    <fullName>Supermarket</fullName>
                </value>
                <value>
                    <fullName>Department Store</fullName>
                </value>
                <value>
                    <fullName>Cash &amp; Carry</fullName>
                </value>
                <value>
                    <fullName>Wholesaler Store</fullName>
                </value>
                <value>
                    <fullName>Wine Shop</fullName>
                </value>
                <value>
                    <fullName>Convenience Store</fullName>
                </value>
                <value>
                    <fullName>Tobacco&amp;Liquor Store</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_City_Converage__c</fullName>
        <label>City Converage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Mechanics__c</fullName>
        <label>Mechanics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Responsible_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_BTL_Launch_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sample_Requirement__c</fullName>
        <label>Sample Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Product_Launch_Request__c</fullName>
        <label>New Product Launch Request</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipLabel>BTL Launch Plans</relationshipLabel>
        <relationshipName>New_Product_BTL_Launch_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>BTL Launch Plan</label>
    <nameField>
        <displayFormat>BTL-{YY}-{00000}</displayFormat>
        <label>BTL Launch Plan No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BTL Launch Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>